--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .search-bar-container {
   display: flex;
-  align-items: rig;
+  align-items: center;
   background-color: aliceblue;
   padding: 5px;
   width: 300px;
